<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    android:gravity="center_vertical"
    app:cardCornerRadius="10dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:background="?attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtvId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/txtvTitle"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:fontFamily="@font/roboto" />

            <TextView
                android:id="@+id/txtvDescription"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:paddingTop="4dp"
                android:singleLine="false"
                android:text="@string/txtvDescription"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:fontFamily="@font/roboto" />

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end|center_vertical"
                android:orientation="horizontal"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/imgStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_todo_done" />

                <TextView
                    android:id="@+id/txtvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end|center_vertical"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:text="@string/txtvDate"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    app:fontFamily="@font/roboto" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/secondaryDarkColor"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:padding="8dp"
                android:text="@string/itmDelete"
                android:textColor="@color/secondaryTextColor"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/ibtnDelete"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/secondaryDarkColor"
                android:contentDescription="@null"
                app:srcCompat="@drawable/ic_todo_delete" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>